Add ControllerDocker support for different simulations

--- a/ControllerDocker/app/src/main/res/values/strings.xml
+++ b/ControllerDocker/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">ControllerDocker</string>
+    <string-array name="simulationArray">
+        <item>CalculateSHA1</item>
+        <item>EstimatePi</item>
+    </string-array>
 </resources>
