Add support for different servers in ControllerDocker

--- a/ControllerDocker/app/src/main/res/values/strings.xml
+++ b/ControllerDocker/app/src/main/res/values/strings.xml
@@ -1,7 +1,12 @@
 <resources>
     <string name="app_name">ControllerDocker</string>
     <string-array name="simulationArray">
-        <item>CalculateSHA1</item>
+        <item>CalculateSha1</item>
         <item>EstimatePi</item>
+    </string-array>
+    <string-array name="serverArray">
+        <item>AWS - Seoul Region</item>
+        <item>Cloudlet - High-end</item>
+        <item>Cloudlet - Mid-end</item>
     </string-array>
 </resources>
