Make MultithreadingAndroid delegate 10 random requests randomly among 5 servers

--- a/MultithreadingAndroid/app/src/main/res/values/strings.xml
+++ b/MultithreadingAndroid/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">MultithreadingAndroid</string>
+    <string-array name="simulationArray">
+        <item>CalculateSha1</item>
+        <item>CalculateFibonacci</item>
+        <item>EstimatePi</item>
+    </string-array>
+    <string-array name="serverArray">
+        <item>AWS - N.Virginia</item>
+        <item>AWS - Oregon</item>
+        <item>AWS - London</item>
+        <item>AWS - Mumbai</item>
+        <item>AWS - Seoul</item>
+        <item>Cloudlet - High-end</item>
+        <item>Cloudlet - Mid-end</item>
+    </string-array>
 </resources>
